# soldev_course

./: .README  .gitignore  README.md  generate_kepair.ts  package-lock.json  package.json  tsconfig.json
Intro _to_client-side_Anchor_development/anchor-ping-frontend/: ChallengeAnchorCounter.ts  idl.json  package-lock.json
anchor_cpis_and_errors/challenge/: package-lock.json  package.json
anchor_cpis_and_errors/lab/: Anchor.toml  package-lock.json  package.json
anchor_pdas_and_accounts/challenge/: Anchor.toml  package-lock.json  package.json
anchor_pdas_and_accounts/lab/: Anchor.toml  package-lock.json  package.json
create_tokens_with_the_token_program/: create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint_tokens.ts  transfer_tokens.ts
create_tokens_with_the_token_program/starter-solana-token-frontend/: package-lock.json  package.json
dApp-development-1/read-data1_2/: example.ts
dApp-development-1/write-data1_3/: example.ts
interact_with_wallets/my-first-dapp/: package-lock.json
intro_to_anchor_development/: Anchor.toml
intro_to_anchor_development/programs/challenge-anchor-counter/: Cargo.toml
intro_to_anchor_development/programs/challenge-anchor-counter/src/: lib.rs
intro_to_anchor_development/tests/: challenge-anchor-counter.ts
module1/1_4/: send-ping-transaction.ts
module1/1_6/: example.ts
module1/read-data1_2/: check-balance.ts
my-first-dapp/: package-lock.json  package.json
my-first-dapp/app/: page.tsx
my-first-dapp/components/: DisplayBalance.tsx  SendSolForm.tsx
src/: challange.ts  index.ts
(+45 files in other folders)
